@@ -1,27 +1,29 @@
 package org.uninstal.seasons.service.cleaner;
 
+import com.uninstal.clans.datas.Clan;
+import com.uninstal.clans.datas.User;
+import com.uninstal.clans.manager.Manager;
 import org.bukkit.Bukkit;
+import org.uninstal.discordbot.DiscordBot;
+import org.uninstal.discordbot.DiscordChannel;
 import org.uninstal.seasons.SeasonConfig;
-import org.uninstal.seasons.SeasonDatabase;
 import org.uninstal.seasons.Seasons;
 import org.uninstal.seasons.data.SeasonUser;
-import org.uninstal.seasons.service.cleaner.impl.CapturesCleaner;
-import org.uninstal.seasons.service.cleaner.impl.ChestsCleaner;
-import org.uninstal.seasons.service.cleaner.impl.ClansCleaner;
-import org.uninstal.seasons.service.cleaner.impl.LevelsCleaner;
+import org.uninstal.seasons.database.BestPlayersList;
+import org.uninstal.seasons.database.UserParameter;
+import org.uninstal.seasons.service.cleaner.impl.*;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
 
 public class SeasonDataCleaner {
 
     // Списоков параметров, по которым будут подводиться итоги
-    private final static List<SeasonDatabase.TargetParameter> parameters = Arrays.asList(
-      SeasonDatabase.TargetParameter.MOB_KILLS,
-      SeasonDatabase.TargetParameter.PLAYER_KILLS,
-      SeasonDatabase.TargetParameter.PLAY_TIME
+    private final static List<UserParameter> SUMMING_PARAMETERS = Arrays.asList(
+      UserParameter.MOB_KILLS,
+      UserParameter.PLAYER_KILLS,
+      UserParameter.PLAY_TIME
     );
 
     private final Seasons plugin;
@@ -32,6 +34,7 @@ public class SeasonDataCleaner {
     public SeasonDataCleaner(Seasons plugin) {
         this.plugin = plugin;
         this.logger = new Logger(plugin);
+        this.logger.setCurrentPrefix("Cleaner > ");
         this.setupCleaners();
     }
 
@@ -39,7 +42,13 @@ public class SeasonDataCleaner {
         register("ApocalypseCaptures", CapturesCleaner.class);
         register("ApocalypseClans", ClansCleaner.class);
         register("ApocalypseLevels", LevelsCleaner.class);
+        register("ApocalypseFriends", FriendsCleaner.class);
+        register("ApocalypseAuction", AuctionCleaner.class);
+        register("ApocalypseStructures", StructuresCleaner.class);
+        register("ApocalypseSeasons", SeasonsCleaner.class);
         register("Minecraft - Chests", ChestsCleaner.class);
+        register("WorldGuard - Regions", RegionsCleaner.class);
+        register("Minepacks", MinepacksCleaner.class);
     }
 
     public void register(String dataName, Class<? extends SeasonDataCleanable> cleanable) {
@@ -62,7 +71,6 @@ public class SeasonDataCleaner {
 
     private void runClearServer() {
         // Для начала освободим сервер от игроков
-        logger.setCurrentPrefix("Cleaner > ");
         logger.info("Enabling whitelist...");
         Bukkit.setWhitelist(true);
         logger.info("Kicking all online players...");
@@ -71,32 +79,75 @@ public class SeasonDataCleaner {
 
     private void runSumming() {
         // Подведение итогов
-        // Используется сразу метод get(), так как лаги не страшны - сервер закрыт
+        // Используется сразу метод join(), так как лаги не страшны - сервер закрыт
         logger.info("The summing up of the players begins...");
-        List<SeasonDatabase.BestPlayersList> lists = parameters.stream()
-          .map(parameter -> {
-              try {
-                  return plugin.getDatabase().getBestPlayers(parameter, 3).get();
-              } catch (InterruptedException | ExecutionException e) {
-                  e.printStackTrace();
-                  return new SeasonDatabase.BestPlayersList(parameter, Collections.emptyList());
-              }
-          }).collect(Collectors.toList());
+        List<BestPlayersList> lists = SUMMING_PARAMETERS.stream()
+          .map(parameter -> plugin.getDatabase()
+            .getBestPlayers(parameter, SeasonConfig.getRewardsQuantity(parameter))
+            .join())
+          .collect(Collectors.toList());
 
-        // Выдача наград в зависимости от места в топе
-        for (SeasonDatabase.BestPlayersList list : lists) {
-            SeasonDatabase.TargetParameter parameter = list.getParameter();
+        // Выдача наград в зависимости от места в топе игроков
+        for (BestPlayersList list : lists) {
+            UserParameter parameter = list.getParameter();
             List<SeasonUser> users = list.getUsers();
+            if (users.size() == 0) continue;
 
+            StringBuilder builder = new StringBuilder();
+            String header = SeasonConfig.getDiscordHeader(parameter);
+            String element = SeasonConfig.getDiscordElement(parameter);
+
+            builder.append(header).append("\n");
             for (int placeIndex = 0; placeIndex < users.size(); placeIndex++) {
                 SeasonUser target = users.get(placeIndex);
-                SeasonConfig.getRewardCommands(parameter, placeIndex + 1)
+                SeasonConfig.getRewardsCommands(parameter, placeIndex + 1)
                   .forEach(command -> {
                       command = command.replace("<player>", target.getUserName());
                       Bukkit.dispatchCommand(Bukkit.getConsoleSender(), command);
                   });
+
+                builder.append(
+                  element
+                    .replace("<place>", String.valueOf(placeIndex + 1))
+                    .replace("<value>", String.valueOf(target.getValue(parameter)))
+                    .replace("<player>", target.getUserName())
+                );
+                if (placeIndex + 1 != users.size()) {
+                    builder.append("\n");
+                }
+            }
+
+            DiscordBot.getService().sendMessage(DiscordChannel.RADIO, builder.toString());
+        }
+
+        // Выдача наград в зависимости от места в топе группировок
+        List<Clan> clans = Manager.getClans();
+        clans.sort(Comparator.comparingInt(Clan::getRating));
+        StringBuilder builder = new StringBuilder();
+        builder.append(SeasonConfig.getDiscordHeader(UserParameter.CLAN));
+        int limit = Math.min(clans.size(), SeasonConfig.getRewardsQuantity(UserParameter.CLAN));
+
+        for (int i = 0; i < limit; i++) {
+            Clan clan = clans.get(i);
+            builder.append(
+              SeasonConfig.getDiscordElement(UserParameter.CLAN)
+              .replace("<place>", String.valueOf(i + 1))
+              .replace("<clan>", clan.getName())
+            );
+            if (i + 1 != limit) {
+                builder.append("\n");
+            }
+
+            for (User user : clan.getAllUsers()) {
+                SeasonConfig.getRewardsCommands(UserParameter.CLAN, i + 1)
+                  .forEach(command -> {
+                      command = command.replace("<player>", user.getName());
+                      Bukkit.dispatchCommand(Bukkit.getConsoleSender(), command);
+                  });
             }
         }
+
+        DiscordBot.getService().sendMessage(DiscordChannel.RADIO, builder.toString().replaceAll("&.|§.", ""));
     }
 
     private void runCleanProcess() {
@@ -121,11 +172,14 @@ public class SeasonDataCleaner {
         Runtime.getRuntime().addShutdownHook(
           new Thread(() -> {
               try {
-                  Process process = new ProcessBuilder().start();
+                  String command = SeasonConfig.getCleanerCommand().replace(
+                    "<path>", SeasonConfig.getCleanerScript());
+                  Runtime.getRuntime().exec(command);
               } catch (IOException e) {
-                  throw new RuntimeException(e);
+                  e.printStackTrace();
               }
-          }));
+          })
+        );
     }
 
     public boolean isRunning() {
